Label: Correct overflow

--- a/marcura-ui/label/label.less
+++ b/marcura-ui/label/label.less
@@ -27,6 +27,7 @@
 
     &-text {
         .box-sizing(border-box);
+        width: 100%;
         display: inline-block;
         vertical-align: top;
         margin: 0;
